Remove ConfigDefault for first PR
Signed-off-by: Artur Kugal <artur.kugal@swirldslabs.com>